# Flyin

./: Makefile  README.md  flyin.py  graph.py  parser.py  pyproject.toml  visualizer.py
tests/: test_individual_parser.py  test_parser.py  test_parser_manager.py  test_validator.py
